--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.2",
-    "@angular/common": "^5.2.2",
-    "@angular/compiler": "^5.2.2",
-    "@angular/core": "^5.2.2",
-    "@angular/forms": "^5.2.2",
-    "@angular/http": "^5.2.2",
-    "@angular/platform-browser": "^5.2.2",
-    "@angular/platform-browser-dynamic": "^5.2.2",
-    "@angular/router": "^5.2.2",
-    "@angular/upgrade": "^5.2.2",
+    "@angular/animations": "^5.2.7",
+    "@angular/common": "^5.2.7",
+    "@angular/compiler": "^5.2.7",
+    "@angular/core": "^5.2.7",
+    "@angular/forms": "^5.2.7",
+    "@angular/http": "^5.2.7",
+    "@angular/platform-browser": "^5.2.7",
+    "@angular/platform-browser-dynamic": "^5.2.7",
+    "@angular/router": "^5.2.7",
+    "@angular/upgrade": "^5.2.7",
     "@kiwi-suite/ngx-admin": "^1.0.0-alpha.0",
     "angular-async-local-storage": "^3.1.1",
     "angular2-text-mask": "^8.0.4",
@@ -37,30 +37,30 @@
     "chart.js": "2.7.1",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
-    "moment": "2.19.1",
+    "moment": "^2.21.0",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "1.9.3",
     "rxjs": "^5.5.6",
     "simple-line-icons": "^2.4.1",
     "text-mask-addons": "^3.7.1",
     "ts-helpers": "1.1.2",
-    "typescript": "^2.6.2",
+    "typescript": "^2.7.2",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.6",
-    "@angular/compiler-cli": "^5.2.2",
-    "@angular/language-service": "^5.2.2",
+    "@angular/cli": "^1.7.2",
+    "@angular/compiler-cli": "^5.2.7",
+    "@angular/language-service": "^5.2.7",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.96",
-    "codelyzer": "^4.1.0",
+    "@types/node": "^6.0.101",
+    "codelyzer": "^4.2.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
